# TwoPhaseFlow

./: .gitignore  .gitmodules  01_MERGE.md  02_CODEGEN.md  AGENTS.md  HANDOVER.md  Makefile  README.md  evaluate_components.py  experiment_cls_advection.py  remote.conf  remote.sh  schema_resolution_report.json  token_telemetry_report.json
src/: README.md  main.py  pyproject.toml  requirements.txt
src/configs/: bubble_2d.yaml  rayleigh_taylor.yaml  stationary_droplet.yaml  zalesak_disk.yaml
src/twophase/: __init__.py  backend.py  config.py  config_io.py  diagnostics.py  gpu_sparse_solve.py  linalg_backend.py  linalg_backend_helpers.py  ns_pipeline.py  plot_factory.py  simulation.py
src/twophase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/twophase/benchmarks/: __init__.py  analytical_solutions.py  presets.py  rayleigh_taylor.py  rising_bubble.py  run_all_benchmarks.py  stationary_droplet.py  zalesak_disk.py
src/twophase/ccd/: __init__.py  block_tridiag.py  ccd_boundary_helpers.py  ccd_solver.py  ccd_solver_helpers.py  fccd.py  fccd_advection_helpers.py  fccd_helpers.py  uccd6.py
src/twophase/configs/: __init__.py  config_loader.py
src/twophase/core/: __init__.py  array_checks.py  boundary.py  components.py  field.py  flow_state.py  grid.py  grid_remap.py  metrics.py  registry.py  transport_adjoint.py
src/twophase/coupling/: __init__.py  capillary_geometry.py  closed_interface_geometry.py  closed_interface_riesz.py  closed_interface_stratum.py  closed_interface_trace.py  closed_interface_trace_riesz.py  closed_interface_trace_velocity.py  gfm.py  (+6 more)
(+2907 files in other folders)
